Plugin Name: Custom Sidebars Pro
Author: Javier Marquez (Incsub), Philipp Stracker (Incsub)

Change Log:
----------------------------------------------------------------------

2.1.0.8
----------------------------------------------------------------------
- Fix a deprecated notice
- Fix bug that prevented Widget-Visibility options to work

2.1.0.7
----------------------------------------------------------------------
- Fix PHP warning about "Missing argument 2 for apply_filters()"

2.1.0.6
----------------------------------------------------------------------
- Fix a bug introduced in last update that prevented creation of custom sidebars

2.1.0.5
----------------------------------------------------------------------
- Add integration for Membership2

2.1.0.4
----------------------------------------------------------------------
- Fix php notices/error in the Sidebar-Cloning module
- Fix missing text-domain in translation

2.1.0.3
----------------------------------------------------------------------
- Add new Widget-Visibility option: Guests only

2.1.0.2
----------------------------------------------------------------------
- Close possible security hole (XSS vulnerability)

2.1.0.1
----------------------------------------------------------------------
- Fix incompatibility with PopUp plugin

2.1.0.0
----------------------------------------------------------------------
- Fixed: Sidebars could not be created on certain webserver setups.

2.0.9.9
----------------------------------------------------------------------
- Fixed: Plugin will install to the correct folder.
- Fixed: Minified CSS files included now.

2.0.9.8
----------------------------------------------------------------------
- Fix: Membership levels are recognized correctly by Visibility module.
- Fix: Export function now works in all browsers.
- Better: Add context-guide how to changes settings for static front-page.
- Better: Improve layout of Custom Sidebars column in posts-list on small screens.
