@@ -46,9 +46,16 @@ module.exports = function( grunt ) {
 				'./README.MD',
 				'./inc/external/wpmudev-dashboard',
 				'./js/cs-cloning.js',
+				'./js/cs-cloning.min.js',
 				'./js/cs-visibility.js',
+				'./js/cs-visibility.min.js',
 				'./css/cs-cloning.css',
+				'./css/cs-cloning.min.css',
 				'./css/cs-visibility.css',
+				'./css/cs-visibility.min.css',
+				'./views/import.php',
+				'./views/quick-edit.php',
+				'./views/col-sidebars.php',
 				'./inc/class-custom-sidebars-cloning.php',
 				'./inc/class-custom-sidebars-export.php',
 				'./inc/class-custom-sidebars-visibility.php',
